# MajorProject

./: .clang-format  CMakeLists.txt  Dockerfile  Object_Detection_Tensorflow_API.py  README.md  StreamingDemo.cc  StreamingDemo.py  tfrecord.py
ImageMontageGeneratorUbuntu/: ImageCollage.sln  Thumbs.db
ImageMontageGeneratorUbuntu/ImageMontage/: GenerateCollage.cs  ImageCollage.cs  ImageCollage.csproj  ImageHeader.cs  Program.cs  SoftEdgeBitmaps.cs  Vector.cs
ImageMontageGeneratorUbuntu/ImageMontage/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
include/: Database.h  Detection.h  Logging.h
rcnn_tf_lfw/data/: lfw_label_map.pbtxt  lfw_test.record  lfw_train.record
rcnn_tf_lfw/models/model/: faster_rcnn_resnet101_pets.config
src/: CMakeLists.txt  Database.cc  Detection.cc  Logging.cc
ssd_tf_lfw/models/model/: ssd_mobilenet_v1.config
tf_lfw/data/: lfw_label_map.pbtxt
tf_lfw/frozen/: model.ckpt.index
tf_lfw/models/model/: ssd_mobilenet_v1.config
tf_lfw/models/train/: model.ckpt-53299.index
